--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,11 @@
 body {
   background-color: tomato;
 }
+
+.box {
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+  margin-right: 100px;
+}
