main axis, cross axis

--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,17 @@
-body {
-}
-
 .father {
   display: flex;
+  height: 100vh; // 100% of the viewport height
   flex-direction: row;
   justify-content: space-between;
   gap: 10px;
+  align-items: center;
 }
 
 .box {
   background-color: tomato;
   width: 100px;
   height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
